# subrosa-rust-backend

./: .gitmodules  Cargo.toml  README.md  build.rs  tree
macros/: Cargo.toml
macros/src/: lib.rs
src/: db_helpers.rs  error.rs  frb_generated.rs  lib.rs  subrosa.proto
src/api/: mod.rs
src/api/db/: connection.rs  entities.rs  migrations.rs  mod.rs  store.rs  sync.rs
src/api/image/: mod.rs
src/api/net/: mod.rs
src/api/pgp/: cert.rs  export.rs  import.rs  keys.rs  mod.rs  mut_store.rs  sharedstore.rs  sign.rs  wot.rs
src/api/pgp/fingerprint/: gismu.txt  mod.rs
src/api/pgp/keyserver/: mod.rs
src/api/pgp/wot/: mod.rs  network.rs  path.rs
src/api/proto/: mod.rs  ser.rs  types.rs
src/api/ser/: mod.rs
src/net/: mod.rs
src/pgp/: mod.rs  store_provider.rs
