[package]
name = "scatterbrain_flutter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
fallible-iterator = "0.3.0"
flutter_rust_bridge = { version = "=2.10.0", features = ["uuid", "chrono"] }
prost = "0.13.5"
prost-types = "0.13.5"
rusqlite = { version = "0.32.1", features = [
    "wasm32-wasi-vfs",
    "uuid",
    "chrono",
    "bundled-full",
] }
thiserror = "2.0.12"
uuid = "1.17.0"
scatterbrain = { path = "./scatterbrain", features = ["flutter"] }
macros = { path = "./macros" }
base64 = "0.22.1"
rusqlite_migration = "1.3.1"
lazy_static = "1.5.0"
chrono = "0.4.41"
convert_case = "0.6.0"
futures = "0.3.31"
tokio = { version = "1.46.1", features = ["test-util"] }
env_logger = "0.11.8"
log = "0.4.27"
sha1 = "0.10.6"
sha2 = "0.10.9"

[build-dependencies]
prost-build = "0.13.5"
