[package]
name = "rust_lib_angzarr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
fallible-iterator = "0.3.0"
flutter_rust_bridge = { version = "=2.11.1", features = ["uuid", "chrono"] }
rusqlite = { version = "0.32.1", features = [
    "wasm32-wasi-vfs",
    "uuid",
    "chrono",
    "bundled-full",
] }
thiserror = "2.0.12"
uuid = "1.17.0"
macros = { path = "./macros" }
base64 = "0.22.1"
rusqlite_migration = "1.3.1"
lazy_static = "1.5.0"
chrono = "0.4.41"
convert_case = "0.6.0"
futures = "0.3.31"
tokio = { version = "1.46.1", features = ["test-util"] }
env_logger = "0.11.8"
log = "0.4.27"
qrcode = "0.14.1"
photon-rs = "0.3.3"
image_hasher = "3.0.0"
sequoia-net = "0.30.0"
#sequoia-openpgp = { version = "2.0.0", features = ["crypto-rust"] }
rqrr = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }
openssl = { version = "0.10.73", features = ["vendored"] }
sequoia-openpgp = { version = "2.0.0", default-features = false, features = ["crypto-botan"] }
#botan-sys = { path ="./botan-rs/botan-sys", features = []}
#botan-src = { path ="./botan-rs/botan-src", features = []}
#nettle = { version = "*", features = ["vendored"]}
sequoia-wot = "0.15.0"
sequoia-cert-store = "0.7.0"

[build-dependencies]
prost-build = "0.13.5"
