[package]
name = "rust_lib_kata"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]


[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
fallible-iterator = "0.3.0"
flutter_rust_bridge = { version = "=2.11.1", features = ["uuid", "chrono"] }
rusqlite = { version = "0.32.1", features = [
    "wasm32-wasi-vfs",
    "uuid",
    "chrono",
    "bundled-full",
] }
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["v4"] }
macros = { path = "./macros" }
base64 = "0.22.1"
rusqlite_migration = "1.3.1"
lazy_static = "1.5.0"
chrono = "0.4.41"
convert_case = "0.6.0"
futures = "0.3.31"
tokio = { version = "1.46.1", features = ["test-util"] }
env_logger = "0.11.8"
log = "0.4.27"
qrcode = "0.14.1"
image_hasher = "3.0.0"
#sequoia-net = { path = "./sequoia/net" }
#sequoia-openpgp = { version = "2.0.0", features = ["crypto-rust"] }
rqrr = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }
openssl = { version = "0.10.73", features = ["vendored"] }
sequoia-openpgp = { version = "2", default-features = false, features = [
    "crypto-botan",
    "compression-bzip2",
    "compression-deflate"
] }
bzip2 = { version = "*", features = [ "static" ] }
#libz-sys = { version = "*", features = [ "cmake", "zlib-ng" ] }
openpgp-cert-d = { path = "./pgp-cert-d/openpgp-cert-d" }
buffered-reader = { path = "./sequoia/buffered-reader" }
#sequoia-autocrypt = { path = "./sequoia/autocrypt" }
#sequoia-ipc = { path = "./sequoia/ipc" }
botan = { version = "*", features = [] }
#botan-sys = { path ="./botan-rs/botan-sys", features = []}
#botan-src = { path ="./botan-rs/botan-src", features = []}
#nettle = { version = "*", features = ["vendored"]}
sequoia-wot = { path = "./sequoia-wot/lib" }
sequoia-cert-store = { version = "0.7", path = "./sequoia-cert-store" }
zeroize = { version = "1.8.1", features = ["aarch64", "derive", "zeroize_derive"] }
serde_json = "1.0.145"
flate2 = "1.1.5"
rmp-serde = "1.3.0"
sequoia-net = "0.30.0"
confusables = "0.1.0"
latkerlo-jvotci = "2.6.2601"

[build-dependencies]
prost-build = "0.13.5"

[dev-dependencies]
tempfile = "3.23.0"
